# Master_thesis

./: .gitattributes  .gitignore  README.md  gp.ipynb  pyproject.toml  targets.csv
Master_thesis/: GP.py  README.md
Master_thesis/tests/: gp.ipynb
data/: features.csv  targets.csv
deep_GP/: GPtorch_example.py
deep_gp/: deep_gaussian.py  deep_kernel_class.py  evaluation.py  gptorch_example.py  preprocessing_data.py  preprocessing_data_2.py  preprocessing_data_copy.py  test_dkl_class.py  utilities.py
notebooks/: 00-linear_regression.ipynb  00-linear_regression2.ipynb  01-deep_Gaussian2.ipynb  01-deep_kernel.ipynb  02-classification.ipynb  02-deep_kernel2.ipynb  02-deep_kernel_PART1.ipynb  02-deep_kernel_PART2.ipynb  02-test_dkl.ipynb  03-GP_classification2.ipynb  03-GP_classification3.ipynb  03-classification.ipynb  03-exactGP_regression.ipynb  04-deep_Gaussian.ipynb  04-exactGP_single_layer.ipynb  ExactGP_single_layer.ipynb  activation_functions.ipynb  download_load_mat.ipynb  elevators.mat  exactGP_single_layer.ipynb  handle_imbalance.ipynb  statistics.ipynb
notebooks/Classification_methods/: 01-classification.ipynb  02-class_remove0.ipynb  03-class_remove0_PART2.ipynb  04-multi-class_classif.ipynb  05-new_approach.ipynb
notebooks/GP_demo/: gp.ipynb  gp_class.ipynb
notebooks/GPtorch_example/: deep_GP_example.ipynb  regress_tutorial.ipynb
tests/: gp.ipynb  gp_class.ipynb
