[project]
name = "deep_gp"
version = "0.1.0"
description = ""
authors = [
    {name = "anchrysoula",email = "chrysoulanast@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "gpytorch (>=1.14.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "bpython (>=0.26,<0.27)",
    "pretty-errors (>=1.2.25,<2.0.0)",
    "h5py (>=3.15.1,<4.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "gdown (>=5.2.0,<6.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "imblearn (>=0.0,<0.1)",
    "xgboost (>=3.1.2,<4.0.0)"
]
packages = [{include = "deep_GP"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
